--- a/app/web.config
+++ b/app/web.config
@@ -5,5 +5,6 @@
       <remove fileExtension=".svg"/>
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
     </staticContent>
-  </system.webServer>  
+  </system.webServer>
+  <customErrors mode="Off"/>
 </configuration>
