--- a/app/web.config
+++ b/app/web.config
@@ -6,5 +6,9 @@
       <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
     </staticContent>
   </system.webServer>
-  <customErrors mode="Off"/>
+    <system.web>
+      <customErrors mode="Off"/>
+      <compilation debug="false"/>
+      <authentication mode="None"/>
+    </system.web>
 </configuration>
