--- a/app/web.config
+++ b/app/web.config
@@ -7,8 +7,8 @@
     </staticContent>
   </system.webServer>
     <system.web>
+    <compilation xdt:Transform="RemoveAttributes(debug)" />
       <customErrors mode="Off"/>
-      <compilation debug="false"/>
       <authentication mode="None"/>
     </system.web>
 </configuration>
