--- a/web.config
+++ b/web.config
@@ -2,9 +2,8 @@
 <configuration>
    <system.webServer>
       <staticContent>
+        <remove fileExtension=".svg />
          <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
-         <mimeMap fileExtension=".woff" mimeType="application/x-woff" />
-         <mimeMap fileExtension=".ttf" mimeType="application/x-woff" />
       </staticContent>
    </system.webServer>
 </configuration>
