--- a/app/web.config
+++ b/app/web.config
@@ -6,4 +6,7 @@
          <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
       </staticContent>
    </system.webServer>
+     <system.web>
+         <customErrors mode="Off"/>
+     </system.web>
 </configuration>
