--- a/app/web.config
+++ b/app/web.config
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-   <system.webServer>
-      <staticContent>
-        <remove fileExtension=".svg />
-         <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
-      </staticContent>
-   </system.webServer>
-     <system.web>
-         <customErrors mode="Off"/>
-     </system.web>
+    <system.webServer>
+        <httpErrors errorMode="Detailed" />
+        <asp scriptErrorSentToBrowser="true"/>
+              <staticContent>
+                <remove fileExtension=".svg />
+                 <mimeMap fileExtension=".svg" mimeType="image/svg+xml" />
+              </staticContent>
+    </system.webServer>
+    <system.web>
+        <customErrors mode="Off"/>
+        <compilation debug="true"/>
+    </system.web>
 </configuration>
