--- a/app/web.config
+++ b/app/web.config
@@ -9,7 +9,7 @@
               </staticContent>
     </system.webServer>
     <system.web>
-        <customErrors mode="Off"/>
+        <customErrors mode="On"/>
         <compilation debug="true"/>
     </system.web>
 </configuration>
